11/23/09 remove slider knob image files, since we're no longer using sliders
11/23/09 add "game settings" control panel
11/23/09 move quantity and coefficient ranges into model base class
11/23/09 first pass at game model, very incomplete
# 0.00.14 (36704) Nov 16, 2009
11/16/09 adjust stacked images when their size changes, so that their bottom edges remain vertically aligned
11/16/09 fix: prevent sandwich leftovers from being placed outside bottom of box when sandwich image is large
11/16/09 fix: radio buttons for selecting reaction have white background on Windows
11/16/09 Sandwich Formula -> Sandwich Equation
11/16/09 tweak font sizes
# 0.00.13 (36648) Nov 13, 2009
11/13/09 show coefficients with value=1
11/12/09 add skeleton for game module
# 0.00.12 (36529) Nov 10, 2009
11/10/09 add Reset All buttons to all modules
11/10/09 add flag to show/hide coefficients with value=1
11/10/09 add flag to show/hide coefficient borders
11/10/09 formula -> equation in code
11/10/09 make "products" label always visible, even when there are no products
# 0.00.11 (36521) Nov 10, 2009
11/10/09 random layout of molecules with no overlap, misc change requests
11/10/09 do all image removal before adding images, to free up space in grid
11/10/09 add pointer tip to bracket node
11/10/09 start with "products" and "leftovers" labels vertically aligned, OK to lose alignment if images are dynamic
11/10/09 fix layout issues with "products" label in sandwich shop, add min bracket width to make single-product case look better
11/10/09 show "reactants" and "products" bracketed labels below Before and After boxes
11/10/09 remove border around coefficients in RealReactionFormulaNode
11/10/09 move GridLinesNode to piccolo-phet
11/10/09 make grid layout look less regular by randomly choosing a location within each cell
11/10/09 add GridLinesNode, for visualizing grid during debugging
11/10/09 first pass at grid strategy for image layout (looks a little too regular)