@@ -8,4 +8,4 @@ meat.png author=PhET
 N2.png author=PhET
 NH3.png author=PhET
 O2.png author=PhET
-sliderKnob.png author=PhET
+blue-stopwatch.jpg source=www.freeclipartnow.com notes=Public Domain license, see http://www.freeclipartnow.com/termsofuse.php
