@@ -1,6 +1,12 @@
 # English strings for reactants-products-and-leftovers
 reactants-products-and-leftovers.name=Reactants, Products and Leftovers
 
+button.check=Check
+button.next=Next
+button.showAnswer=Show Answer
+button.tryAgain=Try Again
+button.newGame=New Game
+
 label.sandwichEquation=Sandwich Equation:
 label.beforeSandwich=Before "Reaction"
 label.afterSwndwich=After "Reaction"
@@ -10,6 +16,9 @@ label.noReaction=no reaction
 label.reactants=reactants
 label.products=products
 label.leftovers=leftovers
+label.level=Level:
+label.timer=Timer:
+label.score=Score:
 
 radioButton.water=Make water
 radioButton.ammonia=Make ammonia
@@ -17,6 +26,10 @@ radioButton.methane=Combust methane
 
 message.valueOutOfRange=Value must be between {0} and {1}.
 
+question.howManyProductsAndLeftovers=<html>How many<br>products & leftovers?</html>
+question.howManyReactants=<html>How many<br>reactants?</html>
+
 title.sandwichShop=Sandwich Shop
 title.realReaction=Real Reaction
 title.game=Game!
+title.gameSettings=Game Settings
